[project]
name = "safespace-agentic-ai-medical-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.0",
    "groq>=0.30.0,<1.0.0",
    "langchain>=1.3.11",
    "langchain-google-genai>=4.2.6",
    "langchain-groq>=1.1.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "twilio>=9.10.9",
    "uvicorn>=0.49.0",
]
